[package]
name = "jwt_auth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-service = "2"
bcrypt = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
jsonwebtoken = "9"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"